--- a/app/locale/nl_NL/German_LocaleNl.csv
+++ b/app/locale/nl_NL/German_LocaleNl.csv
@@ -24,6 +24,17 @@
 "In order to ensure the translation Magento coverage, please see the information in the lower paragraphs!","Om Magento landelijk te kunnen vertalen, moet u ook de informatie in de onderste paragrafen noteren!"
 "powered by","geleverd door"
 "and","en"
+"Translate Magento Connect Manager","Vertaal Magento Connect Manager"
+"To install the translation for the Magento Connect Manager, proceed as follows:","Um die Übersetzung für den Magento Connect Manager zu installieren, gehen Sie bitte wie folgt vor:"
+"In your Magento root directory in the subfolder ""%s"" rename the folder ""%s"" into ""%s"".","In Ihrem Magento-Hauptverzeichnis im Unterordner ""%s"" den Ordner ""%s"" umbenennen in ""%s""."
+"The directory","Das Verzeichnis"
+"or","bzw."
+"from","von"
+"rename into ""template""","in ""template"" umbenennen"
+"The Magento Connect Manager should be changed to %s now.","De Magento Connect Manager moet nu worden omgeschakeld naar het <span style='color:red'>%s</span>."
+"Please note:","Let op:"
+"If Magento is updated, in particular the module ""Mage_Downloader"", the settings of the Connect Manager will be overwritten!","Wenn Magento aktualisiert wird, insbesondere das Modul ""Mage_Downloader"", werden die Einstellungen des Connect Managers überschrieben!"
+"Run in the case a ""Reinstall"" the language pack and repeat the described steps.","Führen Sie in dem Fall ein ""Reinstall"" des Sprachpakets durch und wiederholen die geschilderten Schritte."
 "Using your own translations","Gebruik eigen vertalingen"
 "Recommended extensions","Aanbevolen extensies"
 "The installed language pack only provides translations of in Magento existing texts. If you want to prepare your Magento store on the legal requirements in %s or expand common payment methods, we recommend to install the following additional extensions.","Das installierte Sprachpaket liefert lediglich Übersetzungen der in Magento vorhandenen Texte. Wenn Sie Ihren Magento Shop auf die rechtlichen Anforderungen in %s vorbereiten oder um verbreitete Zahlungsarten erweitern möchten, dann empfehlen wir Ihnen zusätzlich folgende Erweiterungen zu installieren."
