--- a/app/locale/nl_NL/German_LocaleNl.csv
+++ b/app/locale/nl_NL/German_LocaleNl.csv
@@ -34,7 +34,7 @@
 "The Magento Connect Manager should be changed to %s now.","De Magento Connect Manager moet nu worden omgeschakeld naar het <span style='color:red'>%s</span>."
 "Please note:","Let op:"
 "If Magento is updated, in particular the module ""Mage_Downloader"", the settings of the Connect Manager will be overwritten!","Wenn Magento aktualisiert wird, insbesondere das Modul ""Mage_Downloader"", werden die Einstellungen des Connect Managers überschrieben!"
-"Run in the case a ""Reinstall"" the language pack and repeat the described steps.","Führen Sie in dem Fall ein ""Reinstall"" des Sprachpakets durch und wiederholen die geschilderten Schritte."
+"The same applies to the TinyMCE editor. Run in the case a ""Reinstall"" the language pack and repeat the described steps.","Gleiches gilt auch für den TinyMCE-Editor. Führen Sie in dem Fall ein ""Reinstall"" des Sprachpakets durch und wiederholen die geschilderten Schritte."
 "Using your own translations","Gebruik eigen vertalingen"
 "Recommended extensions","Aanbevolen extensies"
 "The installed language pack only provides translations of in Magento existing texts. If you want to prepare your Magento store on the legal requirements in %s or expand common payment methods, we recommend to install the following additional extensions.","Das installierte Sprachpaket liefert lediglich Übersetzungen der in Magento vorhandenen Texte. Wenn Sie Ihren Magento Shop auf die rechtlichen Anforderungen in %s vorbereiten oder um verbreitete Zahlungsarten erweitern möchten, dann empfehlen wir Ihnen zusätzlich folgende Erweiterungen zu installieren."
@@ -50,6 +50,8 @@
 "Extension Key for the","Extensiesleutel voor de"
 "on","auf"
 "More Infos here soon!","Binnenkort meer informatie!"
+"Translate TinyMCE","Vertaal TinyMCE"
+"Use Dutch language for TinyMCE Editor?","Gebruik de Nederlandse versie van de TinyMCE-editor?"
 "custom stores","aangepaste winkels"
 "This is your individual language pack that is only managed and maintained by you.","Dit is je eigen persoonlijke taalpakket dat alleen door jou wordt beheerd en onderhouden."
 "Adjust the file ""%s"" with your name and the link to your website.","Passen Sie die Datei ""%s"" mit Ihrem Namen und dem Link zu Ihrer Webseite an."
